--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,6 +1,7 @@
 canvas {
   padding-left: 0;
   padding-right: 0;
+  z-index: -1;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -8,4 +9,20 @@ canvas {
 
 h1 {
   text-align: center;
+}
+
+#container {
+  margin: 0 auto;
+  width: 500px;
+  height: 500px;
+  border: 3px solid #73AD21;
+}
+
+#vertical-center {
+  margin: 0 auto;
+  /* position: relative;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
 }
