--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -19,7 +19,7 @@ h1 {
   transform: translate(-50%, -50%);
 }
 
-#text {
+#message {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   position: absolute;
