--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,28 +1,52 @@
-canvas {
-  padding-left: 0;
-  padding-right: 0;
-  z-index: -1;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
 
 h1 {
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 #container {
+  position: relative;
   margin: 0 auto;
   width: 500px;
   height: 500px;
-  border: 3px solid #73AD21;
+  border: 3px solid #2C599D;
 }
 
-#vertical-center {
-  margin: 0 auto;
-  /* position: relative;
+#btn {
+  position: absolute;
+  top: 67%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#message {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 32%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#dataForm {
+  position: absolute;
+  width: 50%;
+  height: 20%;
   top: 50%;
   left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); */
+  transform: translate(-50%, -50%);
+}
+
+textarea {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  resize: none;
+}
+
+canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
