--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -12,9 +12,16 @@ h1 {
   border: 3px solid #2C599D;
 }
 
-#btn {
+#getChartBtn {
   position: absolute;
   top: 67%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#resetBtn {
+  position: relative;
+  top: 50px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
