--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -14,7 +14,14 @@ h1 {
 
 #getChartBtn {
   position: absolute;
-  top: 67%;
+  top: 30px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#options {
+  position: absolute;
+  top: auto;
   left: 50%;
   transform: translate(-50%, -50%);
 }
