--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -14,23 +14,25 @@ h1 {
 
 #getChartBtn {
   position: absolute;
-  top: 30px;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 #options {
-  position: absolute;
-  top: auto;
+  position: relative;
+  display: inline-block;
+  margin-top: 30px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
 
 #resetBtn {
   position: relative;
-  top: 50px;
+  display: block;
+  margin-top: 30px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
 
 #message {
