--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -45,6 +45,16 @@ h1 {
   transform: translate(-50%, -50%);
 }
 
+#message2 {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 36%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 #dataForm {
   position: absolute;
   width: 50%;
